# url_shortener_rs

./: Cargo.toml  deny.toml  flake.nix  run_postgres
migrations/2024-05-14-015324_create_urls/: down.sql  up.sql
migrations/2024-05-14-031408_rename_url/: down.sql  up.sql
src/: main.rs  models.rs  schema.rs
